Added new option to writer.